--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Illumia</title>
    
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+   
   </head>
   <body>
     <link
@@ -16,6 +18,7 @@
   ></link>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   </body>
 </html>
